use own docker images

--- a/bases/frontend/deployment.yaml
+++ b/bases/frontend/deployment.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: nginx
+          image: docker.io/slamdev/nginx
           ports:
             - name: http
               containerPort: 80
