--- a/bases/backend/deployment.yaml
+++ b/bases/backend/deployment.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: gcr.io/google_containers/echoserver
+          image: docker.io/slamdev/http-echo
           ports:
             - name: http
               containerPort: 8080
