--- a/prod/eu/backend/kustomization.yaml
+++ b/prod/eu/backend/kustomization.yaml
@@ -3,8 +3,8 @@ kind: Kustomization
 resources:
   - ../../bases/backend
 images:
-  - name: gcr.io/google_containers/echoserver
-    newTag: "1.0"
+  - name: docker.io/slamdev/http-echo
+    newTag: latest
 patchesJson6902:
   - path: ingress-patch.yaml
     target:
