--- a/dev/bases/backend/deployment-patch.yaml
+++ b/dev/bases/backend/deployment-patch.yaml
@@ -9,5 +9,5 @@ spec:
         - name: app
           resources:
             requests:
-              cpu: 100
-              memory: 100M
+              cpu: 50m
+              memory: 64Mi
