--- a/prod/bases/backend/deployment-patch.yaml
+++ b/prod/bases/backend/deployment-patch.yaml
@@ -9,5 +9,5 @@ spec:
         - name: app
           resources:
             requests:
-              cpu: 1
-              memory: 1G
+              cpu: 50m
+              memory: 64Mi
