--- a/prod/bases/namespace/kustomization.yaml
+++ b/prod/bases/namespace/kustomization.yaml
@@ -1,7 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 commonLabels:
-  region: us
+  env: prod
 resources:
-  - frontend
-  - ../bases/namespace
+  - namespace.yaml
