--- a/bases/frontend/kustomization.yaml
+++ b/bases/frontend/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 commonLabels:
   app: frontend
+commonAnnotations:
+  fluxcd.io/automated: "true"
 resources:
   - deployment.yaml
   - ingress.yaml
