--- a/bases/frontend/deployment.yaml
+++ b/bases/frontend/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: app
+  annotations:
+    fluxcd.io/automated: "true"
 spec:
   replicas: 1
   template:
