--- a/prod/eu/flux-patch.yaml
+++ b/prod/eu/flux-patch.yaml
@@ -24,5 +24,5 @@ spec:
       $setElementOrder/containers:
       - name: app
       containers:
-      - image: docker.io/slamdev/frontend:ec6ab9
+      - image: docker.io/slamdev/frontend:7a0cdf
         name: app
