--- a/prod/us/flux-patch.yaml
+++ b/prod/us/flux-patch.yaml
@@ -10,5 +10,5 @@ spec:
       $setElementOrder/containers:
       - name: app
       containers:
-      - image: docker.io/slamdev/frontend:ec6ab9
+      - image: docker.io/slamdev/frontend:7a0cdf
         name: app
