--- a/prod/eu/flux-patch.yaml
+++ b/prod/eu/flux-patch.yaml
@@ -10,7 +10,7 @@ spec:
       $setElementOrder/containers:
       - name: app
       containers:
-      - image: docker.io/slamdev/backend:542bb5
+      - image: docker.io/slamdev/backend:dc7cd8
         name: app
 ---
 apiVersion: extensions/v1beta1
