split dev and prod images

--- a/dev/bases/backend/kustomization.yaml
+++ b/dev/bases/backend/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 namespace: dev
 commonLabels:
   env: dev
+commonAnnotations:
+  flux.weave.works/tag.app: glob:dev-*
 resources:
   - ../../../bases/backend
 patchesStrategicMerge:
