--- a/dev/eu/flux-patch.yaml
+++ b/dev/eu/flux-patch.yaml
@@ -10,7 +10,7 @@ spec:
       $setElementOrder/containers:
       - name: app
       containers:
-      - image: docker.io/slamdev/backend:dc7cd8
+      - image: docker.io/slamdev/backend:dev-21a976
         name: app
 ---
 apiVersion: extensions/v1beta1
