--- a/dev/eu/flux-patch.yaml
+++ b/dev/eu/flux-patch.yaml
@@ -24,5 +24,5 @@ spec:
       $setElementOrder/containers:
       - name: app
       containers:
-      - image: docker.io/slamdev/frontend:7a0cdf
+      - image: docker.io/slamdev/frontend:dev-1b38e9
         name: app
