pass helm values properly

--- a/clusters/dev/eu/flux/kustomization.yaml
+++ b/clusters/dev/eu/flux/kustomization.yaml
@@ -17,4 +17,5 @@ patchesJson6902:
       - op: add
         path: /spec/values
         value:
-          git.path: clusters/dev/eu
+          git:
+            path: clusters/dev/eu
