--- a/clusters/dev/eu/team-a/kustomization.yaml
+++ b/clusters/dev/eu/team-a/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 commonLabels:
   env: team-a
+commonAnnotations:
+  fluxcd.io/tag: "glob:team-a-*"
 namespace: team-a
 resources:
   - namespace.yaml
