--- a/clusters/dev/eu/team-b/kustomization.yaml
+++ b/clusters/dev/eu/team-b/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 commonLabels:
   env: team-b
 namespace: team-b
+commonAnnotations:
+  fluxcd.io/tag: "glob:team-b-*"
 resources:
   - namespace.yaml
   - ../../../../business-apps/app1
