--- a/clusters/prod/eu/prod/kustomization.yaml
+++ b/clusters/prod/eu/prod/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 commonLabels:
   env: prod
+commonAnnotations:
+  fluxcd.io/tag: "glob:prod-*"
 namespace: prod
 resources:
   - namespace.yaml
