--- a/business-apps/app1/deployment.yaml
+++ b/business-apps/app1/deployment.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: docker.io/slamdev/app1:a402a9
+          image: docker.io/slamdev/app1:493640
           ports:
             - name: http
               containerPort: 8080
