--- a/business-apps/app2/deployment.yaml
+++ b/business-apps/app2/deployment.yaml
@@ -10,7 +10,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: docker.io/slamdev/app2:a402a9
+          image: docker.io/slamdev/app2:5e6a4d
           ports:
             - name: http
               containerPort: 8080
