Auto-release docker.io/slamdev/app2:prod-d04d3d

--- a/clusters/prod/eu/flux-patch.yaml
+++ b/clusters/prod/eu/flux-patch.yaml
@@ -12,3 +12,17 @@ spec:
       containers:
       - image: docker.io/slamdev/app1:prod-4a19fe
         name: app
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: app2
+  namespace: prod
+spec:
+  template:
+    spec:
+      $setElementOrder/containers:
+      - name: app
+      containers:
+      - image: docker.io/slamdev/app2:prod-d04d3d
+        name: app
