--- a/clusters/dev/eu/flux-patch.yaml
+++ b/clusters/dev/eu/flux-patch.yaml
@@ -10,7 +10,35 @@ spec:
       $setElementOrder/containers:
       - name: app
       containers:
-      - image: docker.io/slamdev/app1:prod-4a19fe
+      - image: docker.io/slamdev/app1:staging-4e71c9
+        name: app
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: app2
+  namespace: staging
+spec:
+  template:
+    spec:
+      $setElementOrder/containers:
+      - name: app
+      containers:
+      - image: docker.io/slamdev/app2:prod-d04d3d
+        name: app
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: app2
+  namespace: team-a
+spec:
+  template:
+    spec:
+      $setElementOrder/containers:
+      - name: app
+      containers:
+      - image: docker.io/slamdev/app2:prod-d04d3d
         name: app
 ---
 apiVersion: apps/v1
@@ -24,5 +52,5 @@ spec:
       $setElementOrder/containers:
       - name: app
       containers:
-      - image: docker.io/slamdev/app1:prod-4a19fe
+      - image: docker.io/slamdev/app1:staging-4e71c9
         name: app
