--- a/clusters/prod/eu/prod/kustomization.yaml
+++ b/clusters/prod/eu/prod/kustomization.yaml
@@ -2,9 +2,9 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 commonLabels:
   env: prod
-commonAnnotations:
-  fluxcd.io/tag: "glob:prod-*"
 namespace: prod
+commonAnnotations:
+  fluxcd.io/tag.app: "glob:prod-*"
 resources:
   - namespace.yaml
   - app1
