--- a/clusters/prod/us/flux-patch.yaml
+++ b/clusters/prod/us/flux-patch.yaml
@@ -10,5 +10,5 @@ spec:
       $setElementOrder/containers:
       - name: app
       containers:
-      - image: docker.io/slamdev/app2:staging-c367f3
+      - image: docker.io/slamdev/app2:prod-d04d3d
         name: app
