--- a/clusters/dev/eu/flux-patch.yaml
+++ b/clusters/dev/eu/flux-patch.yaml
@@ -38,7 +38,7 @@ spec:
       $setElementOrder/containers:
       - name: app
       containers:
-      - image: docker.io/slamdev/app2:staging-c367f3
+      - image: docker.io/slamdev/app2:team-a-8e7538
         name: app
 ---
 apiVersion: apps/v1
@@ -52,5 +52,5 @@ spec:
       $setElementOrder/containers:
       - name: app
       containers:
-      - image: docker.io/slamdev/app1:staging-4e71c9
+      - image: docker.io/slamdev/app1:team-b-473719
         name: app
