--- a/clusters/prod/eu/flux-patch.yaml
+++ b/clusters/prod/eu/flux-patch.yaml
@@ -10,7 +10,7 @@ spec:
       $setElementOrder/containers:
       - name: app
       containers:
-      - image: docker.io/slamdev/app1:staging-4e71c9
+      - image: docker.io/slamdev/app1:prod-4a19fe
         name: app
 ---
 apiVersion: apps/v1
@@ -24,5 +24,5 @@ spec:
       $setElementOrder/containers:
       - name: app
       containers:
-      - image: docker.io/slamdev/app2:staging-c367f3
+      - image: docker.io/slamdev/app2:prod-d04d3d
         name: app
